<resources>
    <string name="app_name">FinalProject</string>
    <string name="log_in">Log In</string>
    <string name="login_now">Login Now</string>
    <string name="please_login_to_continue_using_app">Please login to continue using app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? SignUp</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email_and_password_to_get_access_to_your_account">Enter your Email and password to get access to your account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_price">Price</string>
    <string name="toast_valid_phoneno">Enter correct Phone Number</string>
    <string name="toast_valid_Email">Email and Password can not be Blank</string>
    <string name="valid_ConfirmPassword">Password and Confirm Password do not match</string>
    <string name="success">Success</string>
    <string name="authentication_Failure">Authentication Failure</string>
    <string name="login_success">Login Successful</string>
    <string name="error">Error Creating User</string>
    <string name="required">Required</string>
    <string name="phone_no">Phone Number</string>
    <string name="invalid_mail">Invalid Email Address</string>
    <string name="description">Description</string>
    <string name="total_26">Total: ₹0</string>
    <string name="place_order">Place Order</string>
    <string name="placed_order_successfully">Placed Order Successfully</string>
    <string name="thank_you_for_shopping">Thank you for shopping</string>
    <string name="enter_valid_email">Enter a valid Mail Address</string>
    <string name="minimum_8_characters">Minimum 8 Character Password</string>
    <string name="atleast_1_uppercase">Must contain 1 Upper-case Character</string>
    <string name="atleast_1_lowercase">Must contain 1 Lowercase Character</string>
    <string name="special_characters">Must contain 1 special character(@#$%^+=)</string>
    <string name="only_numbers">Must contain only Numbers</string>
    <string name="exactly_10_digits">Number must be 10 Digits</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="item_added_successfully">Item Added Successfully</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="quantity_added_successfully">Quantity Added Successfully</string>
    <string name="quantity_changed_successfully">Quantity Changed Successfully</string>

    <string-array name="quantity_string_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="limit_exceed">Limit Exceed</string>
    <string name="failed_to_add_quantity">Failed to add Quantity</string>
    <string name="denim_top">Denim Top</string>
    <string name="qty">Qty</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="price">₹1234</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="title">Title</string>
    <string name="cart">Cart</string>
    <string name="cart_item_deleted">Cart Item is Deleted</string>


</resources>