<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app ="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:padding="8dp"
        android:src="@drawable/denim_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/denim_top"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toEndOf="@id/product_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/quantity"/>

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qty"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/product_title"
        app:layout_constraintTop_toBottomOf="@id/product_title"/>


    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="131dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:weightSum="3"
        app:layout_constraintStart_toEndOf="@+id/quantity"
        app:layout_constraintTop_toBottomOf="@+id/product_title">

        <Button
            android:id="@+id/minus"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemCount"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="25sp" />

        <Button
            android:id="@+id/plus"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/productTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/price"/>



</androidx.constraintlayout.widget.ConstraintLayout>