<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView2"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_now"
            android:textColor="@color/purple" />

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/please_login_to_continue_using_app"
            android:textColor="@color/purple" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:minHeight="30dp"
            android:textSize="16sp"
            app:helperText="Required"
            app:helperTextTextColor="@color/red"
            tools:ignore="SpeakableTextPresentCheck">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:minHeight="30dp"
            android:textSize="16sp"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            app:passwordToggleEnabled="true"
            tools:ignore="SpeakableTextPresentCheck">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="15" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_primary"
            android:text="@string/log_in"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/don_t_have_an_account_signup"
            android:textAlignment="center"
            android:textColor="@color/purple" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>