<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CartFragment">

    <LinearLayout
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/cart_row"
            tools:itemCount="2"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/totalOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:text="@string/total_26"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/orderBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:text="@string/place_order"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cart_is_empty"
            android:textColor="@color/purple"
            android:textAlignment="center"
            android:textSize="30sp"
            android:visibility="visible" />
    </LinearLayout>

</ScrollView>