<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="402dp"
        android:layout_height="678dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView2"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/purple" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email_and_password_to_get_access_to_your_account"
            android:textColor="@color/purple" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:minHeight="30dp"
            android:textSize="16sp"
            app:helperText="Required"
            app:helperTextTextColor="@color/red"
            tools:ignore="SpeakableTextPresentCheck">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:minHeight="30dp"
            android:textSize="16sp"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            tools:ignore="SpeakableTextPresentCheck">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:lines="1"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:minHeight="30dp"
            android:textSize="16sp"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            app:passwordToggleEnabled="true"
            tools:ignore="SpeakableTextPresentCheck">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="15" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:minHeight="30dp"
            android:textSize="16sp"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            app:passwordToggleEnabled="true"
            tools:ignore="SpeakableTextPresentCheck">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="15" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_primary"
            android:text="@string/sign_up"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>