<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.ProductDetailFragment">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="367dp"
                    android:layout_height="315dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/denim_top" />

                <TextView
                    android:id="@+id/product_title"
                    android:layout_width="356dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/title"
                    android:fontFamily="@font/lilita_one_regular"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                    app:layout_constraintEnd_toEndOf="@id/product_image"
                    app:layout_constraintStart_toStartOf="@id/product_image"
                    app:layout_constraintTop_toBottomOf="@id/product_image"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="356dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/product_price"
                    android:fontFamily="@font/open_sans_bold"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="25sp"
                    tools:ignore="DuplicateIds" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans_bold_italic"
                    android:text="@string/description"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/purple_500" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="369dp"
                    android:layout_height="272dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/description"
                    android:textAlignment="gravity"
                    android:textAppearance="?attr/textAppearanceBodySmall"
                    android:textSize="18sp"
                    tools:ignore="DuplicateIds" />

                <Button
                    android:id="@+id/cart_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/add_to_cart"
                    android:textStyle="bold" />


            </LinearLayout>
        </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>